--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -14,7 +14,7 @@
 <body>
   <header class="header-bar mb-3">
     <div class="container d-flex flex-column flex-md-row align-items-center p-3">
-      <img src="/images/nexuslogo.png" width=50px> <h4 class="my-0 mr-md-auto font-weight-normal"><a href="/" class="text-white" id="branding">Community App</a></h4>
+      <img src="/images/nexuslogo.png" width=50px> <h4 class="my-0 mr-md-auto font-weight-normal"><a href="/" class="text-white" id="branding">zemation.net</a></h4>
 
       <% if (user) { %>
         <div class="flex-row my-3 my-md-0">
