fixed footer brand

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="border-top text-center small text-muted py-3">
-  <p class="m-0">Copyright &copy; 2019 <span id="branding"><strong>zemation Studios</strong></span>. All rights reserved.</p>
+  <p class="m-0">Copyright &copy; 2019 <span id="branding" class="font-weight=bold">ZEMATION STUDIOS</span>. All rights reserved.</p>
 </footer>
      
 
